# Neural_Decoding_sklearn

./: .pre-commit-config.yaml  Examples_all_decoders.ipynb  Examples_sklearn_cross_validation.ipynb  Examples_sklearn_decoders.ipynb  README.md  pyproject.toml
.github/workflows/: main.yml
Examples_original/: Examples_all_decoders.ipynb
Neural_Decoding/: decoders.py  download_external_data.py  nn.py  nonlinear.py  preprocessing_funcs.py
tests/: test_decoders.py
